--- a/estilos/style.css
+++ b/estilos/style.css
@@ -34,10 +34,13 @@ section#login{
 
     background-color: white;
     width: 350px;
-    height: 500px;
+    height: 700px;
     border-radius: 20px;
     overflow: hidden;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.459);
+
+    transition: width .3s, height .3s ;
+    transition-timing-function: ease;
 }
 
 section#login > div#imagem{
