--- a/estilos/style.css
+++ b/estilos/style.css
@@ -29,7 +29,7 @@ section#login{
 
     background-color: white;
     width: 350px;
-    height: 700px;
+    height: 600px;
     border-radius: 20px;
     overflow: hidden;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.459);
@@ -52,4 +52,14 @@ section#login > div#formulario{
     display: block;
     padding: 20px;
     text-align: justify;
+}
+
+div#formulario > h1{
+    text-align: center;
+    margin-bottom: 10px;
+
+}
+
+div#formulario > p{
+    font-size: 1em;
 }
