--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -1,24 +1,25 @@
 @charset "UTF-8";
 
 @media screen and (min-width: 768px) and (max-width: 992px) {
-     
+     /*Configurando tablet*/
 body{
     background-image: linear-gradient(to top,#BF895A, #BF4011 );
 }
 
     section#login {
         width: 80vw;
+        height: 450px;
     }
 
     section#login > div#imagem {
         float: left;
-        width: 50%;
+        width: 40%;
         height: 100%;
     }
 
     section#login > div#formulario {
         float: right;
-        width: 50%;
+        width: 60%;
     }
 
     div#formulario > p{
@@ -32,7 +33,7 @@ body{
     }
 
     section#login{
-        width: 900px;
+        width: 750px;
     }
 
     section#login > div#imagem{
@@ -53,4 +54,6 @@ div#formulario > h1{
     div#formulario > p{
         font-size: 1.4em;
     }
+
+    
 }
