--- a/estilos/style.css
+++ b/estilos/style.css
@@ -25,17 +25,18 @@ section#login{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    
 
     background-color: white;
     width: 350px;
-    height: 600px;
+    height: 620px;
     border-radius: 20px;
     overflow: hidden;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.459);
 
     transition: width .3s, height .3s ;
     transition-timing-function: ease;
+    transform: translate(-50%, -50%);
 }
 
 section#login > div#imagem{
@@ -63,3 +64,76 @@ div#formulario > h1{
 div#formulario > p{
     font-size: 1em;
 }
+
+form > div.campo{
+    background-color: #9c350f;
+    display: block;
+    width: 100%;
+    height: 30px;
+    margin: 5px 0px;
+    border-radius: 8px;
+}
+
+div.campo > label{
+    display: none;
+}
+
+div.campo > span {
+    color: white;
+    padding: 4px;
+    font-size: 1.5em;
+    width: 30px;
+}
+
+div.campo > input{
+    background-color: #bf895a;
+    font-size: 1em;
+    height: 100%;
+    border: 0px;
+    border-radius: 8px;
+    width: calc(100% - 90px);
+    transform: translateY(-8px);
+    
+}
+
+
+
+
+
+form > input[type=submit] {
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 35px ;
+    border: none;
+    margin-top: 4px;
+    background-color: #BF4011;
+    color: white;
+    text-decoration: none;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+form > input[type=submit]:hover {
+    background-color: #862d0d;
+    text-decoration: underline;
+}
+
+form > a.botao {
+    display: block;
+    text-align: center;
+    text-decoration: none;
+    background-color: #9c350f;
+    color: white;
+    width: 100%;
+    height: 35px;
+    padding-top: 5px;
+    margin-top: 5px;
+    border-radius: 5px;
+}
+
+form > a.botao:hover{
+    text-decoration: underline;
+    background-color: #d44b19;
+}
+
